[tool.poetry]
name = "transport"
version = "0.1.0"
description = ""
authors = ["Julian Mulla <jmulla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.117"


[tool.poetry.group.dev.dependencies]
awscli = "^1.32.117"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
