[tool.poetry]
name = "transport"
version = "0.1.0"
description = ""
authors = ["Julian Mulla <jmulla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.117"
pycurl = "^7.45.3"
tqdm = "^4.66.4"
requests = "^2.32.3"
fire = "^0.6.0"

confuse = "^2.0.1"
[tool.poetry.group.dev.dependencies]
awscli = "^1.32.117"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tg = "transport.cli:run"
