[project]
name = "transport"
version = "0.1.0"
description = ""
authors = [
    { name = "Julian Mulla", email = "jmulla@gmail.com" }
]
dependencies = [
    "boto3>=1.34.117",
    "pycurl>=7.45.3",
    "tqdm>=4.66.4",
    "requests>=2.32.3",
    "fire>=0.6.0",
    "confuse>=2.0.1",
]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
tg = "transport.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
]
